<resources>
    <string name="app_name">Weather</string>
    <string name="title_today">Today</string>
    <string name="title_future">Future</string>
    <string name="title_date">Date</string>
    <string name="predictability">%s%s</string>
    <string name="emptyTemp">--</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="deg_f">" \u2109"</string>
    <string name="cantGetWeather">"Sorry, can't get weather"</string>
    <string name="weather_state_image">Weather State Image</string>
    <string name="weather_on_date">Weather on Date</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">To get weather location is required</string>
    <string name="enable_now">Enable now</string>

    // Location related stuff
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>

    <string name="noLocationMessage">Make sure you location is ON  when you use this app the first time "
        "\nTurn Location ON using option below.</string>
    <string name="waiting_for_location">Waiting for location</string>

</resources>
